# vision

./: .gitignore  battery.bag
color_detection/: CMakeLists.txt  package.xml
color_detection/src/: color_classifier.cpp  color_classifier.h  color_detector.cpp  color_detector.cpp.save
object_detection/: CMakeLists.txt  package.xml
object_detection/src/: object_depth.cpp
object_detector/: CMakeLists.txt  package.xml
object_detector/include/pcl_transform/: pcl_transform.h
object_detector/include/pre_filter/: pre_filter.h
object_detector/include/roi_extractor/: roi_extractor.h
object_detector/include/wall_detector/: segmented_wall.h  wall_extractor.h
object_detector/msg/: ROI.msg  Wall.msg  Walls.msg
object_detector/src/: object_detector.cpp  obstacle_detector.cpp  obstacle_detector.h  roi_extractor.cpp  wall_colorizer.cpp  wall_detector.cpp  wall_extractor.cpp
object_recognition/: CMakeLists.txt  package.xml
object_recognition/include/color_detection/: color_classifier.h  (+1 more)
object_recognition/src/: color_detector.cpp  color_detector.cpp.autosave  model_fitting.cpp  model_fitting.cpp.autosave  object_confirmation.cpp  object_recognition.cpp  plane_fitting.cpp  shape_classifier_base.cpp  shape_fitting.cpp  shape_recognition.cpp
vision/: package.xml
vision_launch/: CMakeLists.txt  package.xml
vision_launch/launch/: color.launch  vision.launch
vision_msgs/: CMakeLists.txt  package.xml
vision_msgs/msg/: Object.msg  Plane.msg
wall_detector/: CMakeLists.txt  package.xml
wall_detector/src/: wall_detector.cpp  wall_extractor.cpp  wall_extractor.h
(+7 files in other folders)
